# KIRA-QA

./: .gitignore  .replit  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  requirements.txt
.agents/memory/: MEMORY.md  artifact-run-command-cwd.md  auth-401-redirect-pitfall.md  passlib-bcrypt-incompatibility.md  tailwind-v4-import-ordering.md
artifacts/api-server/: run_dev.sh  run_prod.sh
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/app/: main.py
artifacts/api-server/app/api/: admin.py  artifacts.py  attachments.py  auth.py  bug_reports.py  conversations.py  dashboard.py  deps.py  knowledge_base.py  requirement_analyzer.py  test_cases.py  test_scenarios.py
artifacts/api-server/app/core/: config.py  security.py
artifacts/api-server/app/database/: db.py
artifacts/api-server/app/models/: __init__.py  models.py
artifacts/api-server/app/schemas/: schemas.py
artifacts/api-server/app/services/: ai_service.py  (+4 more)
artifacts/kira/: API_CONTRACT.md  index.html  package.json  vite.config.ts
artifacts/kira/.replit-artifact/: artifact.toml
artifacts/kira/src/: App.tsx  index.css
attached_assets/: Pasted-Build-a-full-stack-web-application-called-KIRA-QA-AI-As_1784024064380.txt  Pasted-Now-upgrade-the-existing-KIRA-AI-Assistant-so-employees_1784110007755.txt  Pasted-Now-upgrade-the-existing-KIRA-QA-AI-Assistant-by-adding_1784109024491.txt  Pasted-Update-the-existing-KIRA-AI-Assistant-into-a-simple-app_1784179448375.txt  Pasted-Upgrade-the-existing-KIRA-AI-Assistant-and-clearly-sepa_1784178954799.txt
(+29 files in other folders)
